--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -8,199 +8,201 @@
     tools:context=".presentation.view.home.BestPostFragment"
     android:background="@color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_page_back"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_music"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintStart_toStartOf="@id/iv_back"
-            app:layout_constraintTop_toTopOf="@id/iv_back" />
-
-        <TextView
-            android:id="@+id/tv_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Soranji - Mrs.GREEN APPLE"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:textColor="@color/black"
-            style="@style/regular12"
-            app:layout_constraintStart_toStartOf="@id/iv_music"
-            app:layout_constraintTop_toTopOf="@id/iv_back" />
-
-        <ImageView
-            android:id="@+id/detailImage"
-            android:layout_width="320dp"
-            android:layout_height="330dp"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="35dp"
-            app:layout_constraintTop_toTopOf="@id/tv_music"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/detailImage"
-            app:layout_constraintStart_toStartOf="@id/detailImage">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/iv_heart"
+                android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_heart_off"
-                android:layout_marginTop="20dp" />
+                android:src="@drawable/ic_page_back"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/iv_chat"
+                android:id="@+id/iv_music"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_chat"
+                android:src="@drawable/ic_music"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="30dp"
+                app:layout_constraintStart_toStartOf="@id/iv_back"
+                app:layout_constraintTop_toTopOf="@id/iv_back" />
 
-            <ImageView
-                android:id="@+id/iv_share"
+            <TextView
+                android:id="@+id/tv_music"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_share"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp" />
+                android:text="Soranji - Mrs.GREEN APPLE"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/black"
+                style="@style/regular12"
+                app:layout_constraintStart_toStartOf="@id/iv_music"
+                app:layout_constraintTop_toTopOf="@id/iv_back" />
 
             <ImageView
-                android:id="@+id/iv_bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_bookmark"
-                android:layout_marginStart="200dp"
-                android:layout_marginTop="20dp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/detailId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
-            android:text=" @ sooloin"
-            style="@style/semibold14"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@id/detailImage"
-            app:layout_constraintTop_toBottomOf="@id/detailImage" />
-
-        <TextView
-            android:id="@+id/detailTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="일본 오랜만에 오는데 너무 좋다"
-            style="@style/regular12"
-            android:textColor="@color/black"
-            android:paddingTop="4dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="@id/detailImage"
-            app:layout_constraintTop_toBottomOf="@id/detailId" />
-
-        <TextView
-            android:id="@+id/tv_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="코디"
-            style="@style/semibold14"
-            android:textColor="@color/black"
-            android:layout_marginTop="70dp"
-            app:layout_constraintStart_toStartOf="@id/detailImage"
-            app:layout_constraintTop_toBottomOf="@id/detailTitle" />
-
-        <LinearLayout
-            android:id="@+id/layout_style"
-            android:layout_width="340dp"
-            android:layout_height="90dp"
-            android:orientation="horizontal"
-            android:background="@drawable/style_etv_background"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
-            app:layout_constraintStart_toStartOf="@id/tv_style"
-            app:layout_constraintTop_toBottomOf="@id/tv_style">
+                android:id="@+id/detailImage"
+                android:layout_width="320dp"
+                android:layout_height="330dp"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="35dp"
+                app:layout_constraintTop_toTopOf="@id/tv_music"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/detailImage"
+                app:layout_constraintStart_toStartOf="@id/detailImage">
 
-                <!-- 이미지 -->
-                <FrameLayout
-                    android:layout_width="70dp"
-                    android:layout_height="70dp">
+                <ImageView
+                    android:id="@+id/iv_heart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_heart_off"
+                    android:layout_marginTop="20dp" />
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:cardCornerRadius="20dp"
-                        android:background="@drawable/style_etv_background" >
+                <ImageView
+                    android:id="@+id/iv_chat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_chat"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="20dp" />
 
-                    <ImageView
-                        android:id="@+id/iv_style_shop"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/post_ex1"
-                        android:background="@drawable/style_rounded_image_mask" />
-                    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/iv_share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_share"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="20dp" />
 
-                </FrameLayout>
+                <ImageView
+                    android:id="@+id/iv_bookmark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_bookmark"
+                    android:layout_marginStart="200dp"
+                    android:layout_marginTop="20dp" />
+            </LinearLayout>
 
+            <TextView
+                android:id="@+id/detailId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="55dp"
+                android:text=" @ sooloin"
+                style="@style/semibold14"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/detailImage"
+                app:layout_constraintTop_toBottomOf="@id/detailImage" />
+
+            <TextView
+                android:id="@+id/detailTitle"
+                style="@style/regular12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingTop="4dp"
+                android:text="일본 오랜만에 오는데 너무 좋다"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@id/detailImage"
+                app:layout_constraintTop_toBottomOf="@id/detailId" />
+
+            <TextView
+                android:id="@+id/tv_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="코디"
+                style="@style/semibold14"
+                android:textColor="@color/black"
+                android:layout_marginTop="70dp"
+                app:layout_constraintStart_toStartOf="@id/detailImage"
+                app:layout_constraintTop_toBottomOf="@id/detailTitle" />
+
+            <LinearLayout
+                android:id="@+id/layout_style"
+                android:layout_width="340dp"
+                android:layout_height="90dp"
+                android:orientation="horizontal"
+                android:background="@drawable/style_etv_background"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="50dp"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="@id/tv_style"
+                app:layout_constraintTop_toBottomOf="@id/tv_style">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginStart="10dp"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center">
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_style_title"
+                    <FrameLayout
+                        android:layout_width="70dp"
+                        android:layout_height="70dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:cardCornerRadius="20dp"
+                            android:background="@drawable/style_etv_background" >
+
+                            <ImageView
+                                android:id="@+id/iv_style_shop"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/post_ex1"
+                                android:background="@drawable/style_rounded_image_mask" />
+                        </androidx.cardview.widget.CardView>
+
+                    </FrameLayout>
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="블리즈"
-                        style="@style/medium12"
-                        android:textColor="@color/black"/>
+                        android:orientation="vertical"
+                        android:layout_marginStart="10dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center">
 
-                    <TextView
-                        android:id="@+id/tv_style_subtitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="따뜻하고 귀여운 코디"
-                        style="@style/regular12"
-                        android:textColor="@color/black"/>
+                        <TextView
+                            android:id="@+id/tv_style_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="블리즈"
+                            style="@style/medium12"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:id="@+id/tv_style_subtitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="따뜻하고 귀여운 코디"
+                            style="@style/regular12"
+                            android:textColor="@color/black"/>
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </androidx.core.widget.NestedScrollView>
 
-
-            
-        </LinearLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
