--- a/app/src/main/res/layout/item_grid_post.xml
+++ b/app/src/main/res/layout/item_grid_post.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
 
@@ -13,7 +13,6 @@
         android:id="@+id/grid_card"
         android:layout_width="156dp"
         android:layout_height="198dp"
-        android:background="@color/gray4"
         android:elevation="8dp"
         app:cardCornerRadius="4dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:background="@color/green_main"
             android:padding="10dp">
 
 
