--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -1,118 +1,103 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<!-- fragment_profile.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:layout_margin="45dp"
+    android:padding="16dp">
 
     <ImageView
-        android:id="@+id/back_btn_IV"
-        android:layout_width="15dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp">
-    </ImageView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회원정보"
-        android:textColor="@color/black"
-        style="@style/semibold18"
-        app:layout_constraintBottom_toBottomOf="@+id/back_btn_IV"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/back_btn_IV" />
-
-    <!-- 프로필 이미지 -->
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profileImage"
+        android:id="@+id/profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/temporary_img"
-        app:civ_border_width="1dp"
-        app:civ_border_color="@color/gray2"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/back_btn_IV"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-        android:id="@+id/name_ET"
-        android:layout_width="330dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="35dp"
-        android:hint="닉네임"
-        android:textColor="@color/gray3"
-        android:inputType="text"
-        android:paddingTop="1dp"
-        style="@style/regular12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileImage" />
-
-
-    <EditText
-        android:id="@+id/name_ET2"
-        android:layout_width="330dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="35dp"
-        android:hint="이름"
-        android:textColor="@color/gray3"
-        android:inputType="text"
-        android:paddingTop="1dp"
-        style="@style/regular12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_ET" />
-
-
-    <EditText
-        android:id="@+id/name_ET3"
-        android:layout_width="330dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="35dp"
-        android:hint="ID"
-        android:textColor="@color/gray3"
-        android:inputType="text"
-        android:paddingTop="1dp"
-        style="@style/regular12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_ET2" />
-
-
-    <!-- 로그아웃 버튼 -->
-    <Button
-        android:id="@+id/signup_btn"
-        style="@style/semibold20"
-        android:layout_width="330dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/btn_radius_4"
-        android:text="수정하기"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_ET3" />
-
-    <TextView
-        android:id="@+id/logout_btn"
-        android:layout_width="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/profile_circle_background" />
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="40dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="로그아웃"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup_btn" />
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:text="닉네임"/>
+        <EditText
+            android:id="@+id/text_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:hint="하이"
+            android:inputType="textPersonName"
+            android:layout_marginLeft="8dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:text="이름"/>
+        <EditText
+            android:id="@+id/text_Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:hint="김이름"
+            android:inputType="textPersonName"
+            android:layout_marginLeft="8dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:text="아이디"/>
+        <EditText
+            android:id="@+id/text_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:hint="ID"
+            android:inputType="textPersonName"
+            android:layout_marginLeft="8dp" />
+    </LinearLayout>
+    <Button
+        android:id="@+id/btn_update_profile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#007151"
+        android:textColor="@color/white"
+        android:text="수정하기" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="end">
+        <TextView
+            android:id="@+id/logout_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="로그아웃"
+            android:layout_gravity="bottom"
+            />
+    </LinearLayout>
+
+</LinearLayout>
