--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -45,23 +45,13 @@
             app:layout_constraintStart_toStartOf="@id/iv_music"
             app:layout_constraintTop_toTopOf="@id/iv_back" />
 
-        <WebView
-            android:id="@+id/webViewSpotify"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_music" />
-
         <ImageView
             android:id="@+id/detailImage"
             android:layout_width="320dp"
             android:layout_height="330dp"
             android:scaleType="centerCrop"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/webViewSpotify"
+            app:layout_constraintTop_toBottomOf="@id/tv_music"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -127,7 +117,14 @@
             app:layout_constraintStart_toStartOf="@id/detailImage"
             app:layout_constraintTop_toBottomOf="@id/detailId" />
 
-
+        <WebView
+            android:id="@+id/webViewSpotify"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="100dp"
+            app:layout_constraintStart_toStartOf="@id/detailTitle"
+            app:layout_constraintTop_toBottomOf="@id/detailTitle" />
 
 
 
