--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -139,65 +139,67 @@
 
                 <LinearLayout
                     android:id="@+id/scrapButton"
-                    android:layout_width="120dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:gravity="center"
-                    android:background="@drawable/border_background">
+                    android:background="@drawable/border_background"
+                    android:layout_marginEnd="6dp"> <!-- 오른쪽 여백 추가 -->
                     <ImageView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/book"/>
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:text="스크랩"/>
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/commentButton"
-                    android:layout_width="120dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:gravity="center"
                     android:background="@drawable/border_background"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp">
->
+                    android:layout_marginStart="6dp"
+                    android:layout_marginEnd="6dp"> <!-- 좌우 여백 추가 -->
                     <ImageView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/proicons_chat"/>
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:text="나의 댓글"/>
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/profileEditButton"
-                    android:layout_width="120dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:gravity="center"
                     android:background="@drawable/border_background"
->
+                    android:layout_marginStart="6dp"> <!-- 왼쪽 여백 추가 -->
                     <ImageView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/group"/>
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:text="회원 정보 수정"/>
                 </LinearLayout>
-
             </LinearLayout>
 
             <!-- TabLayout 추가 -->
