--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -23,27 +23,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/iv_music"
-            android:layout_width="wrap_content"
+        <WebView
+            android:id="@+id/webViewSpotify"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_music"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintStart_toStartOf="@id/iv_back"
-            app:layout_constraintTop_toTopOf="@id/iv_back" />
-
-        <TextView
-            android:id="@+id/tv_music"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Soranji - Mrs.GREEN APPLE"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:textColor="@color/black"
-            style="@style/regular12"
-            app:layout_constraintStart_toStartOf="@id/iv_music"
-            app:layout_constraintTop_toTopOf="@id/iv_back" />
+            android:visibility="gone"
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_back"
+            app:layout_constraintBottom_toTopOf="@id/detailImage" />
 
         <ImageView
             android:id="@+id/detailImage"
@@ -51,7 +40,7 @@
             android:layout_height="330dp"
             android:scaleType="centerCrop"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_music"
+            app:layout_constraintTop_toBottomOf="@id/webViewSpotify"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -116,37 +105,6 @@
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="@id/detailImage"
             app:layout_constraintTop_toBottomOf="@id/detailId" />
-
-        <WebView
-            android:id="@+id/webViewSpotify"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_marginTop="100dp"
-            app:layout_constraintStart_toStartOf="@id/detailTitle"
-            app:layout_constraintTop_toBottomOf="@id/detailTitle" />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
