--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -282,12 +282,12 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvSong"/>
 
-                <ImageView
-                    android:id="@+id/btnAddSong"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_plus_button"
-                    android:layout_gravity="center_vertical"/>
+<!--                <ImageView-->
+<!--                    android:id="@+id/btnAddSong"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:src="@drawable/ic_plus_button"-->
+<!--                    android:layout_gravity="center_vertical" />-->
         </LinearLayout>
 
 
